[package]
name = "iroha_p2p"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.clap]
version = "2.33.2"
features = ["yaml"]


[dependencies.p2p_from_std_net]
git = "https://github.com/MrZloHex/p2p_from_std_net"
rev = "5300364"
